--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MOOC-grader\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-05 13:16+0000\n"
+"POT-Creation-Date: 2023-08-08 13:42+0000\n"
 "PO-Revision-Date: 2019-10-12 20:00+0300\n"
 "Last-Translator: Ella Anttila <ella.anttila@aalto.fi>\n"
 "Language-Team: Finnish <>\n"
@@ -107,8 +107,8 @@ msgid ""
 "%(url)s"
 msgstr ""
 "<code>%(key)s</code> puuttuu ja se vaaditaan tulosten toimittamiseen! "
-"Tuloksia voi väliaikaisesti katsella osoitteessa <a href=\"%(url)s\">"
-"%(url)s</a>."
+"Tuloksia voi väliaikaisesti katsella osoitteessa <a "
+"href=\"%(url)s\">%(url)s</a>."
 
 #: access/templates/access/async_accepted.html
 msgid "SUBMISSION_IN_GRADING_NOW"
@@ -180,6 +180,11 @@ msgid "INCORRECT"
 msgstr "Vastauksesi on väärin."
 
 #: access/templates/access/graded_form.html
+#: access/templates/access/graded_form_feedback.html
+msgid "FEEDBACK_CORRECT_WITH_PUNCTUATION"
+msgstr "Oikein!"
+
+#: access/templates/access/graded_form.html
 msgid "CORRECT"
 msgstr "Oikein"
 
@@ -193,10 +198,6 @@ msgstr[1] "%(points)s pistettä"
 #: access/templates/access/graded_form.html
 msgid "NEUTRAL_OPTION_DESCRIPTION"
 msgstr "neutraali vaihtoehto, joka ei vaikuta kokonaispisteisiin"
-
-#: access/templates/access/graded_form_feedback.html
-msgid "FEEDBACK_CORRECT_WITH_PUNCTUATION"
-msgstr "Oikein!"
 
 #: access/templates/access/graded_form_feedback.html
 msgid "FEEDBACK_INCORRECT_WITH_PUNCTUATION"
